# preproject

./: README.md  pyproject.toml
preproject/data/: rev_df.csv
preproject/program/: BertSequenceVectorizer.py  data_mold.py  main.ipynb  my_labspread.py  my_word2vec.py
