[tool.poetry]
name = "preproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
torch = "^1.9.0"
transformers = "^4.10.2"
gensim = "^4.1.2"
Janome = "^0.4.1"
scikit-learn = "^0.24.2"
ipykernel = "^6.4.1"
fugashi = "^1.1.1"
ipadic = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
